// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserMenu /> should render as expected when the user is logged in 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={true}
    logout={[MockFunction]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        Object {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        Object {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    >
      <LoggedIn
        logout={[MockFunction]}
      >
        <Portal
          name="nav-menu.my-account.before"
          props={
            Object {
              "Item": [Function],
            }
          }
        />
        <Portal
          name="nav-menu.my-account"
          props={
            Object {
              "Item": [Function],
            }
          }
        >
          <div
            data-test-id="userMenu"
          >
            <Headline
              small={true}
              style={
                Object {
                  "margin": "24px 20px 16px",
                }
              }
              tag="h2"
              text="navigation.your_account"
            >
              <h2
                className="css-18cwfw7"
                style={
                  Object {
                    "margin": "24px 20px 16px",
                  }
                }
              >
                navigation.your_account
              </h2>
            </Headline>
            <nav
              className={
                Object {
                  "data-css-13ch7sr": "",
                }
              }
            >
              <Portal
                name="nav-menu.logout.before"
                props={
                  Object {
                    "Item": [Function],
                  }
                }
              />
              <Portal
                name="nav-menu.logout"
                props={
                  Object {
                    "Item": [Function],
                  }
                }
              >
                <MoreMenuItem
                  href={null}
                  label="navigation.logout"
                  onClick={[MockFunction]}
                  testId="logoutButton"
                >
                  <button
                    className="css-1czs3p1"
                    onClick={[MockFunction]}
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string="navigation.logout"
                    >
                      <span
                        className=""
                      >
                        navigation.logout
                      </span>
                    </Translate>
                  </button>
                </MoreMenuItem>
              </Portal>
              <Portal
                name="nav-menu.logout.after"
                props={
                  Object {
                    "Item": [Function],
                  }
                }
              />
            </nav>
          </div>
        </Portal>
        <Portal
          name="nav-menu.my-account.after"
          props={
            Object {
              "Item": [Function],
            }
          }
        />
      </LoggedIn>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        Object {
          "entries": null,
          "handleLogout": [MockFunction],
          "isLoggedIn": true,
          "logout": [MockFunction],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;

exports[`<UserMenu /> should render as expected when the user is logged out and the buttons are disabled 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={false}
    logout={[Function]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    >
      <Connect(LoggedOut)>
        <LoggedOut
          dispatch={[Function]}
          isDisabled={true}
        >
          <div
            data-test-id="userMenu"
          >
            <Grid
              className="css-5wxciu"
              component="ul"
              wrap={false}
            >
              <ul
                className="css-5wxciu css-h7r55a"
              >
                <GridItem
                  className="css-yj596"
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <li
                    className="css-yj596"
                  >
                    <Button
                      className="css-6f03lb"
                      disabled={true}
                      flat={false}
                      onClick={null}
                      testId="UserMenuLogin"
                      type="secondary"
                      wrapContent={true}
                    >
                      <Button
                        className="css-ot1d6i css-6f03lb"
                        disabled={true}
                        onClick={null}
                        testId="UserMenuLogin"
                      >
                        <button
                          className="css-ot1d6i css-6f03lb css-1rn65c0"
                          data-test-id="UserMenuLogin"
                          disabled={true}
                          onClick={null}
                        >
                          <div
                            className="css-kwqjom"
                          >
                            <Connect(Link)
                              disabled={true}
                              href="/login"
                            >
                              <Link
                                className=""
                                disabled={true}
                                historyPush={[Function]}
                                historyReplace={[Function]}
                                href="/login"
                                replace={false}
                                state={Object {}}
                                tag="div"
                              >
                                <div
                                  className="css-c6ki83 "
                                  data-test-id="link: /login"
                                  onClick={[Function]}
                                  role="link"
                                >
                                  <Translate
                                    className=""
                                    params={Object {}}
                                    string="login.button"
                                  >
                                    <span
                                      className=""
                                    >
                                      login.button
                                    </span>
                                  </Translate>
                                </div>
                              </Link>
                            </Connect(Link)>
                          </div>
                        </button>
                      </Button>
                    </Button>
                  </li>
                </GridItem>
                <GridItem
                  className="css-yj596"
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <li
                    className="css-yj596"
                  >
                    <Button
                      className="css-6f03lb"
                      disabled={true}
                      flat={false}
                      onClick={null}
                      testId="UserMenuRegister"
                      type="secondary"
                      wrapContent={true}
                    >
                      <Button
                        className="css-ot1d6i css-6f03lb"
                        disabled={true}
                        onClick={null}
                        testId="UserMenuRegister"
                      >
                        <button
                          className="css-ot1d6i css-6f03lb css-1rn65c0"
                          data-test-id="UserMenuRegister"
                          disabled={true}
                          onClick={null}
                        >
                          <div
                            className="css-kwqjom"
                          >
                            <Connect(Link)
                              disabled={true}
                              href="/register"
                            >
                              <Link
                                className=""
                                disabled={true}
                                historyPush={[Function]}
                                historyReplace={[Function]}
                                href="/register"
                                replace={false}
                                state={Object {}}
                                tag="div"
                              >
                                <div
                                  className="css-c6ki83 "
                                  data-test-id="link: /register"
                                  onClick={[Function]}
                                  role="link"
                                >
                                  <Translate
                                    className=""
                                    params={Object {}}
                                    string="login.signup"
                                  >
                                    <span
                                      className=""
                                    >
                                      login.signup
                                    </span>
                                  </Translate>
                                </div>
                              </Link>
                            </Connect(Link)>
                          </div>
                        </button>
                      </Button>
                    </Button>
                  </li>
                </GridItem>
              </ul>
            </Grid>
          </div>
        </LoggedOut>
      </Connect(LoggedOut)>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;

exports[`<UserMenu /> should render as expected when the user is logged out and the buttons are enabled 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <UserMenu
    entries={null}
    isLoggedIn={false}
    logout={[Function]}
    user={null}
  >
    <Portal
      name="user-menu.container.before"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
    <Portal
      name="user-menu.container"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    >
      <Connect(LoggedOut)>
        <LoggedOut
          dispatch={[Function]}
          isDisabled={false}
        >
          <div
            data-test-id="userMenu"
          >
            <Grid
              className="css-5wxciu"
              component="ul"
              wrap={false}
            >
              <ul
                className="css-5wxciu css-h7r55a"
              >
                <GridItem
                  className="css-yj596"
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <li
                    className="css-yj596"
                  >
                    <Button
                      className="css-6f03lb"
                      disabled={false}
                      flat={false}
                      onClick={null}
                      testId="UserMenuLogin"
                      type="secondary"
                      wrapContent={true}
                    >
                      <Button
                        className="css-187rja2 css-6f03lb"
                        disabled={false}
                        onClick={null}
                        testId="UserMenuLogin"
                      >
                        <button
                          className="css-187rja2 css-6f03lb css-1rn65c0"
                          data-test-id="UserMenuLogin"
                          disabled={false}
                          onClick={null}
                        >
                          <div
                            className="css-1fscwua"
                          >
                            <Connect(Link)
                              disabled={false}
                              href="/login"
                            >
                              <Link
                                className=""
                                disabled={false}
                                historyPush={[Function]}
                                historyReplace={[Function]}
                                href="/login"
                                replace={false}
                                state={Object {}}
                                tag="div"
                              >
                                <div
                                  className="css-c6ki83 "
                                  data-test-id="link: /login"
                                  onClick={[Function]}
                                  role="link"
                                >
                                  <Translate
                                    className=""
                                    params={Object {}}
                                    string="login.button"
                                  >
                                    <span
                                      className=""
                                    >
                                      login.button
                                    </span>
                                  </Translate>
                                </div>
                              </Link>
                            </Connect(Link)>
                          </div>
                        </button>
                      </Button>
                    </Button>
                  </li>
                </GridItem>
                <GridItem
                  className="css-yj596"
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <li
                    className="css-yj596"
                  >
                    <Button
                      className="css-6f03lb"
                      disabled={false}
                      flat={false}
                      onClick={null}
                      testId="UserMenuRegister"
                      type="secondary"
                      wrapContent={true}
                    >
                      <Button
                        className="css-187rja2 css-6f03lb"
                        disabled={false}
                        onClick={null}
                        testId="UserMenuRegister"
                      >
                        <button
                          className="css-187rja2 css-6f03lb css-1rn65c0"
                          data-test-id="UserMenuRegister"
                          disabled={false}
                          onClick={null}
                        >
                          <div
                            className="css-1fscwua"
                          >
                            <Connect(Link)
                              disabled={false}
                              href="/register"
                            >
                              <Link
                                className=""
                                disabled={false}
                                historyPush={[Function]}
                                historyReplace={[Function]}
                                href="/register"
                                replace={false}
                                state={Object {}}
                                tag="div"
                              >
                                <div
                                  className="css-c6ki83 "
                                  data-test-id="link: /register"
                                  onClick={[Function]}
                                  role="link"
                                >
                                  <Translate
                                    className=""
                                    params={Object {}}
                                    string="login.signup"
                                  >
                                    <span
                                      className=""
                                    >
                                      login.signup
                                    </span>
                                  </Translate>
                                </div>
                              </Link>
                            </Connect(Link)>
                          </div>
                        </button>
                      </Button>
                    </Button>
                  </li>
                </GridItem>
              </ul>
            </Grid>
          </div>
        </LoggedOut>
      </Connect(LoggedOut)>
    </Portal>
    <Portal
      name="user-menu.container.after"
      props={
        Object {
          "entries": null,
          "handleLogout": [Function],
          "isLoggedIn": false,
          "logout": [Function],
          "user": null,
        }
      }
    />
  </UserMenu>
</Provider>
`;
